# librime-cantoboard

./: CMakeLists.txt  README.md
src/: cantoboard_module.cc  cantoboard_module.h
tools/: CMakeLists.txt  cantoboard_console.cc
